# FSSH

./: README.md
data/: E_plot.plt  trj.txt
src/: CMakeLists.txt  main.cpp
